[gd_scene load_steps=5 format=3 uid="uid://bxnhv7hwuc6ib"]

[ext_resource type="Script" path="res://PointReward.gd" id="1_5fjug"]
[ext_resource type="FontFile" uid="uid://buuk2nfstr30k" path="res://UI/Fonts/NanumGothicCoding-Bold.ttf" id="1_waa55"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgkqx"]
resource_local_to_scene = true
bg_color = Color(0.69525, 0.75, 0.2025, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4m3bh"]
radius = 36.0

[node name="PointReward" type="Node2D"]
script = ExtResource("1_5fjug")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 1
offset_left = -12.5
offset_top = -12.5
offset_right = 12.5
offset_bottom = 12.5
theme_override_styles/panel = SubResource("StyleBoxFlat_vgkqx")

[node name="PointLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("1_waa55")
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PickupCollision" type="Area2D" parent="."]
collision_layer = 24
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupCollision"]
shape = SubResource("CircleShape2D_4m3bh")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.9, 0.9)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
